--- a/ui/style.css
+++ b/ui/style.css
@@ -3,7 +3,8 @@
     width = 9px;
     height = 9px;
     /*margin:5px 5px 5px 5px;
-    */border-radius: 5px;
+    */
+    border-radius: 50px;
     background: gray;
     border: none;
     padding: 0;
@@ -87,7 +88,7 @@ list.activatable {
 /*控制中心的滑动条*/
 
 .ling-scale trough {
-    min-width: 70px;  /* 轨道宽度 */
+    /*min-width: 50px;  /* 轨道宽度 */
     /*border-height:50px;*/
     border-color: rgba(0,0,0,0);
     border-radius: 50px;
@@ -101,7 +102,7 @@ list.activatable {
 
 .ling-scale slider{
     min-height: 10px;
-    min-width:  70px;
+    /*min-width:  70px;*/
     border-radius: 10px;
     border:5px;
     border-color:rgba(0,0,0,0);
