--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 /* 页面指示器 */
 .dot {
-    width = 9px;
-    height = 9px;
+    /*width = 9px;
+    height = 9px;*/
     /*margin:5px 5px 5px 5px;
     */
     border-radius: 50px;
@@ -65,7 +65,7 @@
 }
 
 .desktop-folder{
-    background-color:rgba(255,100,100,0.8);
+    background-color:rgba(100,200,100,0.6);
     border-radius: 15px;
 }
 
@@ -277,4 +277,25 @@ fixed { min-width: 100%; min-height: 100%; }
 .task_switcher_bar:hover{
     background-color: rgba(0,0,0,0.7);
     transform: scaleX(0.9) /*scaleY(0.95)*/;
+}
+
+.wlan_list_item{
+    font-size:30px;
+}
+
+.wlan_list{
+    background-color: rgba(255,200,200,0.5);
+    border-radius: 30px;
+    margin:10px;
+}
+
+.wlan_list_box{
+    background-color: rgba(255,255,255,1);
+    border-radius: 30px;
+    font-size:50px;
+}
+
+
+.desktop-item-folder-label{
+    font-size:30px;
 }
