--- a/ui/style.css
+++ b/ui/style.css
@@ -319,3 +319,20 @@ fixed { min-width: 100%; min-height: 100%; }
 .cl_window{
     background-color: rgba(255,255,255,1);
 }
+
+.desktop_item_frame_show{
+    border-radius: 20px;
+    border-width:10px;
+    border-color: rgba(0,0,0,1);
+    /*opacity:0.5;*/
+    background-color:rgba(0,0,0,1);
+}
+
+
+.desktop_item_frame_hide{
+    border-radius: 20px;
+    border-width:10px;
+    border-color: rgba(255,255,255,1);
+    opacity:0;
+    background-color:rgba(0,0,0,1);
+}
