--- a/ui/style.css
+++ b/ui/style.css
@@ -345,3 +345,31 @@ fixed { min-width: 100%; min-height: 100%; }
     opacity:0;
     background-color:rgba(0,0,0,1);
 }
+
+
+.win_detail_hide{
+    /*逐步消失*/
+    opacity: 0;
+    transition: opacity 0.1s ease-in-out;
+}
+
+
+.win_detail_show{
+    /*逐步浮现*/
+    opacity: 1;
+    transition: opacity 0.1s ease-in-out;
+}
+
+.remove-button{
+    border-radius: 50px;
+    border-style: none;
+    background:rgba(255,255,255,0.8);
+    transform: scale(1);
+    transition: background 0.2s transform 0.2s;
+}
+
+.remove-button:hover{
+    background:rgba(255,255,255,0.5);
+    transform: scale(0.95);
+    transition: background 0.2s transform 0.2s;
+}
